<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/createDbBtn"
       android:text="@string/create_database"

       />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/nameET"
       android:hint="@string/enter_the_name_here"
       android:layout_below="@id/createDbBtn"
       android:nextFocusDown="@id/addressET"

/>
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/addressET"
       android:hint="@string/enter_your_address_here"
       android:layout_below="@id/nameET"

       />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:id="@+id/addValuesBtn"
      android:layout_below="@id/addressET"
      android:text="@string/add_values_into_db"
      />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/getValuesBtn"
       android:layout_below="@id/addValuesBtn"
       android:text="@string/get_values"

      />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:id="@+id/getValuesTV"
       android:layout_below="@id/getValuesBtn"

      />
   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:id="@+id/RV"
       android:layout_below="@id/getValuesTV"



      />






</RelativeLayout>